// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Pagination component correctly 1`] = `
.c1 {
  color: #0097A7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  color: #006064;
}

.c0 {
  margin: 0 auto;
  float: right;
}

.c0 li {
  float: left;
  margin-bottom: 32px;
  width: 32px;
  height: 32px;
}

.c2 {
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
  color: #EEEEEE;
  background: #004D40;
  pointer-events: none;
}

.c2:hover {
  background: #004D40;
}

@media (max-width:1200px) {
  .c0 {
    float: none;
  }
}

@media (max-width:1200px) {
  .c0 li {
    margin-bottom: 0;
    width: calc(100% / 8);
  }
}

<div>
  <ul
    className="c0"
  >
    <li>
      <a
        className="c1 c2"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          1
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with both next page link and previous page link correctly 1`] = `
.c1 {
  color: #0097A7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  color: #006064;
}

.c0 {
  margin: 0 auto;
  float: right;
}

.c0 li {
  float: left;
  margin-bottom: 32px;
  width: 32px;
  height: 32px;
}

.c2 {
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
  color: #EEEEEE;
  background: #00796B;
  pointer-events: auto;
}

.c2:hover {
  background: #004D40;
}

.c3 {
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
  color: #EEEEEE;
  background: #004D40;
  pointer-events: none;
}

.c3:hover {
  background: #004D40;
}

@media (max-width:1200px) {
  .c0 {
    float: none;
  }
}

@media (max-width:1200px) {
  .c0 li {
    margin-bottom: 0;
    width: calc(100% / 8);
  }
}

<div>
  <ul
    className="c0"
  >
    <li>
      <a
        className="c1 c2"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        ←
      </a>
    </li>
    <li>
      <a
        className="c1 c2"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          1
        </span>
      </a>
    </li>
    <li>
      <a
        className="c1 c3"
        href="/articles/page/2"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          2
        </span>
      </a>
    </li>
    <li>
      <a
        className="c1 c2"
        href="/articles/page/3"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          3
        </span>
      </a>
    </li>
    <li>
      <a
        className="c1 c2"
        href="/articles/page/3"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        →
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with previous page link correctly 1`] = `
.c1 {
  color: #0097A7;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  color: #006064;
}

.c0 {
  margin: 0 auto;
  float: right;
}

.c0 li {
  float: left;
  margin-bottom: 32px;
  width: 32px;
  height: 32px;
}

.c2 {
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
  color: #EEEEEE;
  background: #00796B;
  pointer-events: auto;
}

.c2:hover {
  background: #004D40;
}

.c3 {
  display: block;
  text-align: center;
  line-height: 32px;
  font-size: 1.5rem;
  color: #EEEEEE;
  background: #004D40;
  pointer-events: none;
}

.c3:hover {
  background: #004D40;
}

@media (max-width:1200px) {
  .c0 {
    float: none;
  }
}

@media (max-width:1200px) {
  .c0 li {
    margin-bottom: 0;
    width: calc(100% / 8);
  }
}

<div>
  <ul
    className="c0"
  >
    <li>
      <a
        className="c1 c2"
        href="/articles/page/2"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        ←
      </a>
    </li>
    <li>
      <a
        className="c1 c2"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          1
        </span>
      </a>
    </li>
    <li>
      <a
        className="c1 c2"
        href="/articles/page/2"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          2
        </span>
      </a>
    </li>
    <li>
      <a
        className="c1 c3"
        href="/articles/page/3"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          3
        </span>
      </a>
    </li>
  </ul>
</div>
`;
